Release 0.4.0:
- fix in diff algorithm
- add tests

Release 0.3.0:
- Js library
- new algorithm, faster but less accurate,
  based on Gregory Cobena's phd thesis

Release 0.2:
- #2: error when comparing <foo/> to <foo><bar/></foo>
- use polymorphic variants not to require -rectypes flag
- compile and install xmldiff .cmti
- new parameter ~cut for Xmldiff.diff to quicken the comparison
  by lowering precision under some tags.

